[gd_scene load_steps=3 format=3 uid="uid://bvvv5mp4xovsk"]

[ext_resource type="Script" path="res://effects/ghost_effect.gd" id="1_npnys"]
[ext_resource type="Texture2D" uid="uid://c51eitc20yuqa" path="res://assets/coco/coco_01.png" id="2_o0t72"]

[node name="GhostEffect" type="Node2D"]
script = ExtResource("1_npnys")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_o0t72")

[node name="TimerEffect" type="Timer" parent="."]
one_shot = true

[node name="TimerSpawn" type="Timer" parent="."]

[connection signal="timeout" from="TimerEffect" to="." method="_on_timer_effect_timeout"]
[connection signal="timeout" from="TimerSpawn" to="." method="_on_timer_spawn_timeout"]
